#461 Velocity: Fix template bugs for migration

--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -15,6 +15,7 @@ a.ecomproduct__button,
     display: inline-block;
     padding: 0.7em 2em;
 	min-height: 50px;
+	height: auto !important;
     .border-radius(0);
 	border: 1px solid @color__button--border;
     background-color: @color__button--background;
