--- a/less/widgets/gallery.less
+++ b/less/widgets/gallery.less
@@ -173,6 +173,7 @@
 		bottom: 0;
 		background-size: cover;
 		background-position: center center;
+		padding: 0 !important;
 	}
 
 	// Using the background image instead.
