--- a/migration/migration.less
+++ b/migration/migration.less
@@ -22,6 +22,10 @@
 		background: #fff !important;
 	}
 
+	ol li.row-template-preview__template-list-item:before {
+		content: none;
+	}
+
 	// Template styling resets
 	// ------------------------------------
 
