#461 Velocity: Fix template bugs for migration

--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -9,13 +9,14 @@ a.link-button,
 .tweet .button,
 .clicktocall .phone-number-link,
 a.ecomproduct__button,
-.userregistration button {
+.userregistration button,
+a.contentgroup__link {
     cursor: pointer;
     position: relative;
     display: inline-block;
     padding: 0.7em 2em;
 	min-height: 50px;
-	height: auto !important;
+	height: auto;
     .border-radius(0);
 	border: 1px solid @color__button--border;
     background-color: @color__button--background;
