--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -128,6 +128,10 @@ textarea {
 	}
 }
 
+textarea {
+	min-height: 100px;
+}
+
 // Dropdowns
 
 .select-wrap {
@@ -153,15 +157,15 @@ textarea {
 
 	.responsivecolumns & {
 		.style--dark & {
-			background-color: fade(@color--dark, 5%);
-			border-color: fade(@color--dark, 75%);
-		}
-
-		.style--light & {
 			background-color: @color-text--lightest;
 			border-color: fade(@color__form--border, 75%);
 		}
-
+	
+		.style--light & {
+			background-color: fade(@color--dark, 5%);
+			border-color: fade(@color--dark, 75%);
+		}
+	
 		.style--accent & {
 			background-color: fade(@contrast--accent, 5%);
 			border-color: fade(@contrast--accent, 75%);
@@ -187,17 +191,16 @@ textarea {
 
 		.responsivecolumns & {
 			.style--dark & {
-				border-color: @color--dark;
+				border-color: @color__form--border;
 			}
 	
 			.style--light & {
-				border-color: @color__form--border;
+				border-color: @color--dark;
 			}
 	
 			.style--accent & {
 				border-color: @contrast--accent;
 			}
-
 		}
     }
 
@@ -517,6 +520,32 @@ input:focus {
 				&:before,
 				&:after {
 					.border-radius(1em);
+				}
+			}
+		}
+
+		.option-item--checkbox {
+			label {
+				&:after {
+					background: transparent !important;
+					border-bottom: 6px solid @color__button--background;
+					border-right: 6px solid @color__button--background;
+					width: 1em;
+					margin-left: 0.25em;
+					margin-top: -0.85em;
+					transform: rotate(45deg) scale(0.5);
+
+				    .style--dark & {
+						border-color: @color__button--background;
+				    }
+
+					.style--light & {
+						border-color: @color--dark;
+				    }
+
+				    .style--accent & {
+				    	border-color: @contrast--accent;
+				    }
 				}
 			}
 		}
