--- a/less/widgets/navigation.less
+++ b/less/widgets/navigation.less
@@ -448,7 +448,7 @@ a.companyname {
 		right: 0;
 		left: auto;
 		opacity: 0;
-    	margin: 0.5em 0 0;
+    	margin: 0.5em 0.15em 0;
 		padding: 0;
 		width: auto;
 		min-width: 300px;
