#127 In the store, when the search is used and nothing is found, the "Clear Search" button does not have the full width.

--- a/less/plugins/ecommerce/ecommerce-product-list.less
+++ b/less/plugins/ecommerce/ecommerce-product-list.less
@@ -180,12 +180,12 @@
 		}
 		
 		.input--search {
-			background-color: fade(@color__ecomproductslist-product-title--text, 5%);
+			background-color: fade(@color__ecomproductslist-product-title--text, 10%);
 			border: 1px solid @color__ecomproductslist-product-title--text;
 			color: @color__ecomproductslist-product-title--text;
 	
 			.style--dark & {
-				background-color: @color-text--lightest;
+				background-color: @color-text--lighter;
 				border-color: fade(@color__form--border, 75%);
 			}
 		
@@ -201,7 +201,7 @@
 		
 			.responsivecolumns & {
 				.style--dark & {
-					background-color: @color-text--lightest;
+					background-color: @color-text--lighter;
 					border-color: fade(@color__form--border, 75%);
 				}
 			
@@ -281,7 +281,7 @@
 			border: 1px solid @color__ecomproductslist-product-title--text;
 
 			.style--dark & {
-				background-color: @color-text--lightest;
+				background-color: @color-text--lighter;
 				border-color: fade(@color__form--border, 75%);
 			}
 		
