--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -10,7 +10,8 @@ a.link-button,
 .clicktocall .phone-number-link,
 a.ecomproduct__button,
 .userregistration button,
-a.contentgroup__link {
+a.contentgroup__link,
+a.ecomproductslist__button--clear {
     cursor: pointer;
     position: relative;
     display: inline-block;
