--- a/less/plugins/ecommerce/ecommerce-product.less
+++ b/less/plugins/ecommerce/ecommerce-product.less
@@ -315,11 +315,11 @@ a.ecomproduct__button {
     .select-wrap {
         max-width: 100%;
 		margin-top: 0;
-		background-color: fade(@color__ecomproductslist-product-title--text, 5%);
+		background-color: fade(@color__ecomproductslist-product-title--text, 10%);
 		border: 1px solid @color__ecomproductslist-product-title--text;
 
 		.style--dark & {
-			background-color: @color-text--lightest;
+			background-color: @color-text--lighter;
 			border-color: fade(@color__form--border, 75%);
 		}
 	
