#254 If the blog tag word is too long it overflows the layout

--- a/less/plugins/blog/blog-post.less
+++ b/less/plugins/blog/blog-post.less
@@ -364,6 +364,9 @@
 
 a.blogpost__category-link,
 a.blogpost__tag-link {
+	display: inline-block;
+	word-break: break-word;
+	line-height: 1.4em;
     hyphens: none;
 }
 
