#201 After a search the text "Return to Blog" is too close to the blog posts

--- a/less/widgets/buttons.less
+++ b/less/widgets/buttons.less
@@ -11,7 +11,8 @@ a.link-button,
 a.ecomproduct__button,
 .userregistration button,
 a.contentgroup__link,
-a.ecomproductslist__button--clear {
+a.ecomproductslist__button--clear,
+a.blogpostlist__blog-home-link {
     cursor: pointer;
     position: relative;
     display: inline-block;
@@ -224,6 +225,12 @@ a.link-button,
 .icon:before {
 	margin: 0.5em 0.5em 0.5em 0;
 	width: auto;
+}
+
+// Blog Back Button
+
+a.blogpostlist__blog-home-link {
+	margin-bottom: 2em;
 }
 
 // The List of Social Icons
