--- a/less/plugins/blog/blog-search.less
+++ b/less/plugins/blog/blog-search.less
@@ -20,4 +20,14 @@
 
 .blogsearch__form {
     margin: 0 auto 2em;
+
+	.form-group {
+		@media @mobile {
+			width: 100%;
+		}
+
+		.responsivecolumns & {
+			width: 100%;
+		}
+	}
 }
