#201 After a search the text "Return to Blog" is too close to the blog posts

--- a/less/widgets/forms.less
+++ b/less/widgets/forms.less
@@ -16,6 +16,14 @@
 		.form-group {
 			margin-bottom: 1em;
 
+			@media @mobile {
+				width: 100%;
+			}
+
+			.responsivecolumns & {
+				width: 100%;
+			}
+
 			&:last-of-type,
 			&.js-recaptcha {
 				margin-bottom: 0;
