--- a/less/plugins/blog/blog-post-list.less
+++ b/less/plugins/blog/blog-post-list.less
@@ -109,6 +109,7 @@
     a.blogpostlist__image-link {
         background-position: center center;
         background-size: cover;
+		opacity: 0.25;
         position: absolute;
         top: 0;
         left: 0;
